[gd_scene load_steps=10 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://GFX/Items/doors/sprite_01.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/doors/sprite_04.png" type="Texture" id=3]
[ext_resource path="res://GFX/Items/doors/sprite_10.png" type="Texture" id=4]
[ext_resource path="res://GFX/Items/doors/sprite_07.png" type="Texture" id=5]
[ext_resource path="res://GFX/Items/doors/sprite_15.png" type="Texture" id=6]
[ext_resource path="res://GFX/Items/doors/sprite_16.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.0385, 91.386 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "opening",
"speed": 5.0
} ]

[node name="BlueDoor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.2734, 8.56404 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1, 1.3 )
frames = SubResource( 2 )
animation = "closed"

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.3 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.3 )
z_index = 3
texture = ExtResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 6 )
rotation = 1.5708
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 26, 6 )
rotation = -1.5708
enabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
